Changelog
---------

### Next Version
* __DNA/RNA can be selected as receptor with --dnareceptor__
* Improved handling of NMR structures

### 1.3.3
* __Adds XML Parser module for PLIP XML files__
* Detection of intramolecular interactions with --intra
* improved error correction in PDB files

### 1.3.2
* __Processing of protein-peptide interactions via --peptides__
* option to keep modified residues as ligands (--keepmod)
* Improved code for reports
* Smart ordering of ligand in composite compounds
* Fixes handling and visualization of DNA/RNA

### 1.3.1
* __Support for amino acids as ligands__
* __Plugin-ready for PyMOL and Chimera__
* Refactores code and optimized input
* Improved verbose and debug log system
* Bugfixes for problems affecting some structures with aromatic rings

### 1.3.0
* __Batch processing__
* Improvements to verbose mode and textual output

### 1.2.3
* __Better support for files from MD and docking software__
* __Fixes issues with large and complex structures__
* Speed optimizations


### 1.2.2
* __Option to consider alternate atom locations (e.g. for ligands with several conformations__
* Automatic fixing of missing ligand names
* Improved handling of broken PDB files and non-standard filenames
* Improved error handling

### 1.2.1
* __Mapping of canonical atom order to PDB atom order for each ligand__
* __Introduction of debug mode (--debug)__
* More robust visualization
* Handling of negative residue numbers for more cases
* Composite members in alphabetical order
* Fixes errors in aromatic ring detection
* Code improvements

### 1.2.0
* __Support for DNA and RNA as ligands__
* __Detection of metal complexes with proteins/ligands, including prediction of geometry__
* __Extended result files with detailed information on binding site residues and unpaired atoms__
*__Support for zipped and gzipped files__
* Rich verbose mode in command line with information on detected functional groups and interactions